--- a/ags/app/ui/ags_primary_menu.ui
+++ b/ags/app/ui/ags_primary_menu.ui
@@ -35,6 +35,10 @@
         <attribute name="action">app.preferences</attribute>
       </item>
       <item>
+        <attribute name="label" translatable="yes">Download samples</attribute>
+        <attribute name="action">app.download</attribute>
+      </item>
+      <item>
         <attribute name="label" translatable="yes">_About</attribute>
         <attribute name="action">app.about</attribute>
       </item>
