--- a/ags/app/ui/ags_add_menu.ui
+++ b/ags/app/ui/ags_add_menu.ui
@@ -55,6 +55,10 @@
         <attribute name="action">app.add_stargazer_synth</attribute>
       </item>
       <item>
+        <attribute name="label" translatable="yes">Quantum Synth</attribute>
+        <attribute name="action">app.add_quantum_synth</attribute>
+      </item>
+      <item>
         <attribute name="label" translatable="yes">FPlayer</attribute>
         <attribute name="action">app.add_ffplayer</attribute>
       </item>
