--- a/ags/app/ui/ags_add_menu.ui
+++ b/ags/app/ui/ags_add_menu.ui
@@ -59,6 +59,10 @@
         <attribute name="action">app.add_quantum_synth</attribute>
       </item>
       <item>
+        <attribute name="label" translatable="yes">Raven Synth</attribute>
+        <attribute name="action">app.add_raven_synth</attribute>
+      </item>
+      <item>
         <attribute name="label" translatable="yes">FPlayer</attribute>
         <attribute name="action">app.add_ffplayer</attribute>
       </item>
