--- a/ags/app/ui/ags_machine_menu.ui
+++ b/ags/app/ui/ags_machine_menu.ui
@@ -78,6 +78,10 @@
             <attribute name="label" translatable="yes">MIDI connection</attribute>
             <attribute name="action">machine.midi_connection</attribute>
 	  </item>
+	  <item>
+            <attribute name="label" translatable="yes">MIDI CC connection</attribute>
+            <attribute name="action">machine.midi_cc_connection</attribute>
+	  </item>
 	</section>	  
       </submenu>
       <submenu>
